<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regInterestedIn">

    <TextView
        android:id="@+id/InterestedInBigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/InterestedInScroll"
        android:layout_marginTop="50sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reg_header_interested_in"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp" />

    <TextView
        android:id="@+id/InterestedInWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/InterestedInBigText"
        android:layout_alignStart="@id/InterestedInScroll"
        android:layout_alignEnd="@id/InterestedInScroll"
        android:paddingHorizontal="0sp"
        android:text="@string/reg_warning_interested_in" />


    <ScrollView
        android:id="@+id/InterestedInScroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/ContinueButton"
        android:layout_below="@id/InterestedInWarning"
        android:layout_marginHorizontal="75sp"
        android:layout_marginTop="30sp"
        android:layout_marginBottom="30sp">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <ToggleButton
                android:id="@+id/InterestedInActionButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_action"
                android:textOn="@string/reg_interested_in_action" />

            <ToggleButton
                android:id="@+id/InterestedInWesternButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_western"
                android:textOn="@string/reg_interested_in_western" />

            <ToggleButton
                android:id="@+id/InterestedInNoirButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_noir"
                android:textOn="@string/reg_interested_in_noir" />

            <ToggleButton
                android:id="@+id/InterestedInDetectiveButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_detective"
                android:textOn="@string/reg_interested_in_detective" />

            <ToggleButton
                android:id="@+id/InterestedInDramaButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_drama"
                android:textOn="@string/reg_interested_in_drama" />

            <ToggleButton
                android:id="@+id/InterestedInMusicalButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_musical"
                android:textOn="@string/reg_interested_in_musical" />

            <ToggleButton
                android:id="@+id/InterestedInComedyButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_comedy"
                android:textOn="@string/reg_interested_in_comedy" />

            <ToggleButton
                android:id="@+id/InterestedInMelodramaButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_melodrama"
                android:textOn="@string/reg_interested_in_melodrama" />

            <ToggleButton
                android:id="@+id/InterestedInFairyTailButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_fairy_tale"
                android:textOn="@string/reg_interested_in_fairy_tale" />

            <ToggleButton
                android:id="@+id/InterestedInTragedyButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_tragedy"
                android:textOn="@string/reg_interested_in_tragedy" />

            <ToggleButton
                android:id="@+id/InterestedInThrillerButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_thriller"
                android:textOn="@string/reg_interested_in_thriller" />

            <ToggleButton
                android:id="@+id/InterestedInHorrorButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_horror"
                android:textOn="@string/reg_interested_in_horror" />

            <ToggleButton
                android:id="@+id/InterestedInTragicomedyButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_tragicomedy"
                android:textOn="@string/reg_interested_in_tragicomedy" />

            <ToggleButton
                android:id="@+id/InterestedInYoutubeButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_youtube"
                android:textOn="@string/reg_interested_in_youtube" />

            <ToggleButton
                android:id="@+id/InterestedInFantasyButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_fantasy"
                android:textOn="@string/reg_interested_in_fantasy" />

            <ToggleButton
                android:id="@+id/InterestedInGangsterButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_gangster"
                android:textOn="@string/reg_interested_in_gangster" />
            <ToggleButton
                android:id="@+id/InterestedInHistoricalButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_historical"
                android:textOn="@string/reg_interested_in_historical" />

            <ToggleButton
                android:id="@+id/InterestedInDisasterButton"
                android:layout_width="match_parent"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_margin="3sp"
                android:background="@drawable/custom_toggle_button"
                android:textOff="@string/reg_interested_in_disaster"
                android:textOn="@string/reg_interested_in_disaster" />

        </GridLayout>
    </ScrollView>

    <Button
        android:id="@+id/ContinueButton"
        android:enabled="true"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="25sp"
        android:layout_marginBottom="10sp"
        android:text="@string/continue_btn" />

</RelativeLayout>