<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regSchool">

    <TextView
        android:id="@+id/SchoolBigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@id/SchoolInput"
        android:layout_marginTop="50sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reg_header_school"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/SchoolInput"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/SchoolBigText"
        android:layout_marginHorizontal="75sp"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/reg_placeholder_school"/>

    <TextView
        android:id="@+id/SchoolWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/SchoolInput"
        android:layout_alignStart="@id/SchoolInput"
        android:layout_alignEnd="@id/SchoolInput"
        android:paddingHorizontal="5sp"
        android:text="@string/reg_warning_school" />

    <Button
        android:id="@+id/ContinueButton"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_alignParentBottom="true"
        android:layout_marginHorizontal="25sp"
        android:layout_marginBottom="10sp"
        android:text="@string/continue_btn" />

</RelativeLayout>