<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".regPhone">

    <TextView
        android:id="@+id/PhoneNumberBigText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/PhoneNumberInput"
        android:layout_marginTop="50sp"
        android:fontFamily="sans-serif-medium"
        android:text="@string/reg_header_phone"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="34sp" />

    <EditText
        android:id="@+id/PhoneNumberInput"
        android:layout_width="match_parent"
        android:layout_height="52dp"
        android:layout_below="@id/PhoneNumberBigText"
        android:layout_marginHorizontal="75sp"
        android:ems="10"
        android:inputType="phone"
        android:text="@string/reg_placeholder_phone"/>

    <TextView
        android:id="@+id/PhoneNumberWarning"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/PhoneNumberInput"
        android:layout_alignLeft="@id/PhoneNumberInput"
        android:layout_alignRight="@id/PhoneNumberInput"
        android:paddingHorizontal="5sp"
        android:text="@string/reg_warning_phone" />

    <Button
        android:id="@+id/ContinueButton"
        android:enabled="false"
        android:layout_width="match_parent"
        android:layout_height="67dp"
        android:layout_below="@id/PhoneNumberWarning"
        android:layout_marginTop="50sp"
        android:layout_marginHorizontal="25sp"

        android:text="@string/continue_btn" />
</RelativeLayout>